--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,18 @@ aioice==0.10.1
 aiortc==1.13.0
 pylibsrtp==0.12.0
 av==14.4.0
-ultralytics==8.3.172
-torch==2.7.1
-torchvision==0.22.1
-torchaudio==2.7.1
-Pillow==11.3.0
-numpy==2.2.6
-opencv-python==4.12.0.88
+
+ultralytics==8.2.50
+torch==2.3.1
+torchvision==0.18.1
+torchaudio==2.3.1
+
+Pillow==11.0.0
+numpy==1.26.4
+opencv-python-headless==4.9.0.80
 pyttsx3==2.99
 pyyaml==6.0.2
+
+
+
 
