--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pylibsrtp==0.12.0
 av==14.4.0
 
 ultralytics==8.2.50
+--extra-index-url https://download.pytorch.org/whl/cpu
 torch==2.3.1
 torchvision==0.18.1
 torchaudio==2.3.1
