--- a/requirements.txt
+++ b/requirements.txt
@@ -3,13 +3,13 @@ streamlit-webrtc==0.63.3
 aioice==0.10.1
 aiortc==1.13.0
 pylibsrtp==0.12.0
-av==14.4.0
+av==14.0.0
 
 
 --extra-index-url https://download.pytorch.org/whl/cpu
-torch==2.3.1
-torchvision==0.18.1
-torchaudio==2.3.1
+torch==2.5.1+cpu
+torchvision==0.20.1+cpu
+torchaudio==2.5.1+cpu
 
 ultralytics==8.2.50
 Pillow==11.0.0
