--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,7 @@
 paths:
   examples: examples/    # folder for sample images/videos
   results: runs/         # where detection outputs will be saved
-  models: model/   
+  models: app/model/   
 
 model:
   default: app/model/alternate.pt
